fixed some bugs and added orders

--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,7 +1,7 @@
 {
   "/api/*": {
     "target":  {
-      "host": "localhost",
+      "host": "167.99.215.253",
       "protocol": "http:",
       "port": 8080
     },
